--- a/index.html
+++ b/index.html
@@ -118,16 +118,6 @@
     <!-- Step 0: Intro -->
     <div id="intro" class="popup" style="display:block;">
       <div id="introOverlay"></div>
-      <div class="popup-card">
-        Haaiiiii my babieeee 😘💖<br><br>
-        I have a little secret for you…<br>
-        Something cute, something silly, and something just for YOU mere budheeee!<br><br>
-        Today is a very special day… but shhh 🤫💞<br>
-        I’ve been planning this little surprise for my most handsome, cutest, and perfect Sahu 🥰💖<br>
-        You make me laugh, smile, and feel warm and loved inside, even from miles away 🥹🩷<br>
-        Are you ready for a tiny magical surprise? 💌✨<br><br>
-        Click anywhere to see it! 💖💖
-      </div>
     </div>
 
     <!-- Step 1: Envelope -->
@@ -183,47 +173,67 @@
     const finalStep = document.getElementById("final");
     const end = document.getElementById("end");
 
-    const surpriseText = "Guess what today is? 🤔🎉";
+    // Intro messages as individual popups
+    const introMessages = [
+      "Haaiiiii my babieeee 😘💖",
+      "I have a little secret for you…",
+      "Something cute, something silly, and something just for YOU mere budheeee!",
+      "Today is a very special day… but shhh 🤫💞",
+      "I’ve been planning this little surprise for my most handsome, cutest, and perfect Sahu 🥰💖",
+      "You make me laugh, smile, and feel warm and loved inside, even from miles away 🥹🩷",
+      "Are you ready for a tiny magical surprise? 💌✨",
+      "Click anywhere to see it! 💖💖"
+    ];
+
     const popupTexts = [
+      "Guess what today is? 🤔🎉",
       "IT'S DA BOYFRIENDS DAYYYY YAYYYYY!!!!! 😈😛",
       "Happy Boyfriend Dayyy TO MY BOYFIEEEEE!!!! 💕",
       "You’re the best thing ever happened to me 💐",
       "I lobe you endlessly, Sahu meri babygorl 😚"
     ];
-    const questionsTexts = [
+
+    const questionTexts = [
       "Do you know you’re the most perfect boyfriend ever? 🥰",
       "Will you let me be your annoying baddie forever? 😏😛",
       "Do you like being spoiled with my love? 😘",
       "Can I keep you forever and ever? 💖"
     ];
 
+    let introIndex = 0;
     let popupIndex = 0;
     let questionIndex = 0;
 
-    // Step 0: Click anywhere to hide intro and show envelope
+    // Step 0: show intro messages one by one
     introOverlay.onclick = () => {
-      intro.style.display = "none";
-      envelope.style.display = "block";
+      showIntroMessage();
     };
+
+    function showIntroMessage() {
+      if(introIndex < introMessages.length) {
+        popup.innerHTML = `<div class="popup-card">${introMessages[introIndex]}</div>`;
+        popup.style.display = "block";
+        introIndex++;
+        setTimeout(showIntroMessage, 2000);
+      } else {
+        popup.style.display = "none";
+        intro.style.display = "none";
+        envelope.style.display = "block";
+      }
+    }
 
     // Step 1: Envelope click
     envelope.onclick = () => {
       envelope.style.display = "none";
-      showEnvelopeSurprise();
+      showPopupMessages();
     };
 
-    function showEnvelopeSurprise() {
-      popup.innerHTML = `<div class="popup-card">${surpriseText}</div>`;
-      popup.style.display = "block";
-      setTimeout(showPopups, 3000);
-    }
-
-    function showPopups() {
-      if (popupIndex < popupTexts.length) {
+    function showPopupMessages() {
+      if(popupIndex < popupTexts.length) {
         popup.innerHTML = `<div class="popup-card">${popupTexts[popupIndex]}</div>`;
         popup.style.display = "block";
         popupIndex++;
-        setTimeout(showPopups, 3000);
+        setTimeout(showPopupMessages, 3000);
       } else {
         popup.style.display = "none";
         showQuestions();
@@ -231,9 +241,9 @@
     }
 
     function showQuestions() {
-      if (questionIndex < questionsTexts.length) {
+      if(questionIndex < questionTexts.length) {
         questions.innerHTML = `
-          <div class="popup-card">${questionsTexts[questionIndex]}</div>
+          <div class="popup-card">${questionTexts[questionIndex]}</div>
           <br>
           <button class="btn" onclick="nextQuestion()">Yes 💖</button>
         `;
@@ -241,8 +251,6 @@
       } else {
         questions.style.display = "none";
         letter.style.display = "block";
-        createHearts();
-        createSparkles();
       }
     }
 
@@ -259,6 +267,8 @@
     function showEnd() {
       finalStep.style.display = "none";
       end.style.display = "block";
+      createHearts();
+      createSparkles();
     }
 
     function createHearts() {
@@ -288,4 +298,4 @@
     }
   </script>
 </body>
-  </html>
+      </html>
